[project]
name = "pydsadoc"
version = "0.1.0"
description = "A project focused on implementing Data Structure and Algorithms."
authors = [
    {name = "Aina", email = "you@example.com"},
]
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]
dependencies = [
    # Code Style Checker
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=6.1.0,<7.0.0)",
    "black (>=25.11.0,<26.0.0)",
    # Requirements for building with Sphinx
    "Sphinx (>=7.4.7,<8.0.0)",
    "furo (>=2025.9.25,<2026.0.0)",
    "sphinx-copybutton (>=0.5.2,<0.6.0)",
    "sphinx-inline-tabs (>=2023.4.21,<2024.0.0)",
    "sphinx-autobuild (==2024.2.4)",
]

[project.optional-dependencies]
test = [
    # Requirements for CI/CD pipeline
    "pylint (>=3.3.9,<4.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    # Testing Framework
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-repeat (>=0.9.4,<0.10.0)",
]

[project.urls]
Homepage = "https://hgsrq.fun"
Repository = "https://github.com/Enec0De/pydsadoc"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "pydsadoc", from = "src"}
]

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
    "--cov=pydsadoc",
    "--cov-branch",
    "--count=10",
]
testpaths = ["tests"]

[tool.mypy]
"mypy_path" = "stubs"